--- a/.github/workflows/main_chatgpttester.yml
+++ b/.github/workflows/main_chatgpttester.yml
@@ -29,6 +29,10 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Build
+        run: |
+         python setup.py install
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
