--- a/.github/workflows/main_chatgpttester.yml
+++ b/.github/workflows/main_chatgpttester.yml
@@ -21,7 +21,10 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: '3.11'
-
+      - name: Install PIP
+        run: |
+          python -m pip install --upgrade pip
+        
       - name: Create and start virtual environment
         run: |
           python -m venv venv
