--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ rich
 textract @ git+https://github.com/thehunmonkgroup/textract@41c8a14de9facbfe21a1881cda49ced67b3bb5a4
 sqlalchemy>=1.4.48
 tiktoken
+lwe
